--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                     <li class="nav-item">
                         <a href="#help" class="nav-link">Обратная связь</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="https://simariasi.github.io/MAGAZIN/" class="nav-link">Будущее</a>
+                    </li>
+                    
                 </ul>
         
             </div>
